syntax = "proto3";
package com.vang;
option java_package = "com.vang.user_service.grpc.generated";
option java_multiple_files = true;
option java_outer_classname = "ForgotPasswordServer";

service CheckMailForgotPassword {
  rpc checkForgot(CheckMailForgotPasswordRequest) returns (CheckMailForgotPasswordReply);
}

message CheckMailForgotPasswordRequest {
  string email = 1;
}

message CheckMailForgotPasswordReply {
  bool status = 1;
}